# omnino_gazebo

./: CMakeLists.txt  package.xml
config/: joint_velocity.yaml
launch/: amcl.launch  amcl_demo.launch  multi_agent.launch  omnino_empty_world.launch  omnino_multi_empty.launch  race_map.launch  single_agent.launch  single_rviz.launch  start_mpc.launch
maps/: jackal_world.pgm  jackal_world.yaml
mesh/: chassis.dae  chassis.stl  chassis_hull.dae  control.dae  control.stl  power.dae  power.stl  socket.dae  socket.stl  untitled.blend  untitled.blend1  untitled.dae
multiplot_configs/: rqt_multiplot.xml
params/: costmap_common_params.yaml
rviz_configs/: race_map_trajectories.rviz
src/: MPC.py  controller.py  inv_kine.py  mpc_controller.py  odometry.cpp  path_planner.py  proportional_controller.py
xacro/: layer1.urdf.xacro  layer2.urdf.xacro  main.urdf.xacro  raspberry.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro  socket.urdf.xacro
